Bug 974857.  Compare attempted anchor traversals to both the actual page URI and the exposable URI, and do an anchor scroll if either one matches.  r=smaug